simulation node bake but it is not baking #113812

Closed
opened 2023-10-17 10:19:56 +02:00 by Aery · 7 comments

System Information
Operating system: win 10
Graphics card: rx 6500 xt

Blender Version
Broken: 4.1 alpha
Worked: -

Short description of error
When disabling cache then hit bake, the bake process started and when finished there is no error message but the bake files are not created

Exact steps for others to reproduce the error
Disable cache -> hit bake -> the bake files are not created

**System Information** Operating system: win 10 Graphics card: rx 6500 xt **Blender Version** Broken: 4.1 alpha Worked: - **Short description of error** When disabling cache then hit bake, the bake process started and when finished there is no error message but the bake files are not created **Exact steps for others to reproduce the error** Disable cache -> hit bake -> the bake files are not created
Aery added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-17 10:19:57 +02:00
Member

Hi, thanks for the report. From current behavior, it seems cache property needs to be enabled for creating bake data in directory.
Had a quick look at a code but still not sure if this is intended behavior or not.
@mod_moder @JacquesLucke , can you check?

Hi, thanks for the report. From current behavior, it seems `cache` property needs to be enabled for creating bake data in directory. Had a quick look at a code but still not sure if this is intended behavior or not. @mod_moder @JacquesLucke , can you check?
Pratik Borhade added
Module
Nodes & Physics
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2023-10-18 08:22:52 +02:00
Iliya Katushenock added
Status
Confirmed
Meta
Good First Issue
and removed
Status
Needs Info from Developers
labels 2023-10-18 08:25:48 +02:00
Contributor

Hello, I'm looking for a good first issue, I saw this and I have a couple questions about the intended behaviour.

Should the entire simulation be able to bake even with the cache option disabed, should the baking happen just to the current frame, or should the baking option be entirely disabled?

According to the "Simulation Node" documentation:
Cache
For the cases where the current frame is the only one relevant, users can opt-out of caching the results to save memory.

Hello, I'm looking for a good first issue, I saw this and I have a couple questions about the intended behaviour. Should the entire simulation be able to bake even with the cache option disabed, should the baking happen just to the current frame, or should the baking option be entirely disabled? According to the "Simulation Node" [documentation](https://docs.blender.org/manual/en/latest/physics/simulation_nodes.html): *Cache For the cases where the current frame is the only one relevant, users can opt-out of caching the results to save memory.*

@FieryAery Hi, thanks for looking for that. As i can see, it's better to disable Bake button at all in disabled cache case.

@FieryAery Hi, thanks for looking for that. As i can see, it's better to disable `Bake` button at all in disabled cache case.
Contributor

@FieryAery Hi, thanks for looking for that. As i can see, it's better to disable Bake button at all in disabled cache case.

If that’s the solution, then I can do it. I need just to make a pull request with the changes?

> @FieryAery Hi, thanks for looking for that. As i can see, it's better to disable `Bake` button at all in disabled cache case. If that’s the solution, then I can do it. I need just to make a pull request with the changes?

Yep, correct.

Yep, correct.
Contributor

I opened a pull request some months ago, is there any further step I have to take?

I opened a pull request some months ago, is there any further step I have to take?
Member

Hi, thanks for the PR. It wasn't assigned to anybody for review so PR went unnoticed. Iliya added the reviewer now :)

Hi, thanks for the PR. It wasn't assigned to anybody for review so PR went unnoticed. Iliya added the reviewer now :)
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-21 14:13:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113812
No description provided.